# P4F2

./: .gitignore
ariac_behaviors/ariac_logistics_flexbe_states/: CMakeLists.txt  package.xml  setup.py
ariac_behaviors/ariac_logistics_flexbe_states/src/ariac_logistics_flexbe_states/: get_material_locations.py  get_order_state.py  get_part_from_products_state.py  get_products_from_shipment_state.py
ariac_behaviors/ariac_support_flexbe_states/: CMakeLists.txt  package.xml  setup.py
ariac_behaviors/ariac_support_flexbe_states/src/ariac_support_flexbe_states/: add_numeric_state.py  equal_state.py  get_item_from_list_state.py  greater_numeric_state.py  less_numeric_state.py  replace_state.py  substract_numeric_state.py
assignment/: CMakeLists.txt  package.xml  setup.py  test.text
assignment/config/orders/: assignment_order.yaml  example_order.yaml  sample_order.yaml
assignment/config/orders/original_orders/: example_custom_config.yaml  sample.yaml  sample_dropped_products.yaml  sample_flipped.yaml  sample_interruption1.yaml  sample_interruption2.yaml  sample_not_enough_products.yaml  sample_required_agv.yaml  sample_sensor_blackout.yaml
assignment/config/orders/original_orders/finals/: final_01.yaml  final_02.yaml  final_03.yaml  final_04.yaml  final_05.yaml  final_06.yaml  final_07.yaml  final_08.yaml  final_09.yaml  final_10.yaml  final_11.yaml  final_12.yaml  (+3 more)
assignment/config/orders/shipments/: assignment_order.yaml
assignment/config/sensors/: assignment_sensor_config.yaml  sample_sensor_config.yaml
assignment/launch/: ariac_assignment_start.launch  ariac_example_start.launch  move_groups_start.launch
assignment/scripts/: vaccum_gripper_example.py
assignment/src/opdracht/: test_je_sm.py  test_sm.py
(+103 files in other folders)
