<package>
  <name>ariac_support_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     ariac_support_states provides a collection of support states.
  </description>
  <maintainer email="GA.harkema@avans.nl">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
